@@ -1,6 +1,8 @@
 1 November 2011: Wouter
 	- dns over ssl support as a client, ssl-upstream yes turns it on.
 	  It performs an SSL transaction for every DNS query (250 msec).
+	- documentation for new options: ssl-upstream, ssl-service-key and
+	  ssl-service.pem.
 
 31 October 2011: Wouter
 	- dns over ssl support, ssl-service-pem and ssl-service-key files
